--- a/diagramming.cabal
+++ b/diagramming.cabal
@@ -28,6 +28,7 @@ executable diagramming
                      , diagrams-lib
                      , diagrams-rasterific
                      , JuicyPixels
+                     , split
                      , wx
                      , wxcore
   -- hs-source-dirs:      
