--- a/diagramming.cabal
+++ b/diagramming.cabal
@@ -21,7 +21,7 @@ executable diagramming
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7
+  build-depends:       base 
                      , bytestring
                      , cabal-macosx
                      , diagrams
